user_menu_chouette: cleanup

--- a/addons/user_menu_chouette/views/res_config_view.xml
+++ b/addons/user_menu_chouette/views/res_config_view.xml
@@ -3,8 +3,8 @@
     <data>
         <!-- modify Configuration/GeneralSettings view defined in
              addons/base_setup/res_config_view.xml -->
-        <record id="view_general_configuration_user_menu_support_url" model="ir.ui.view">
-            <field name="name">base.config.settings.user_menu_support_url</field>
+        <record id="view_general_configuration_x_user_menu_support_url" model="ir.ui.view">
+            <field name="name">base.config.settings.x_user_menu_support_url</field>
             <field name="model">base.config.settings</field>
             <field name="inherit_id" ref="base_setup.view_general_configuration"/>
             <field name="arch" type="xml">
@@ -12,7 +12,7 @@
                     <group>
                         <label for="x_user_menu_support_url"/>
                         <div name="x_user_menu_support">
-                            <field name="x_user_menu_support_url" class="aaaoe_inline"/>
+                            <field name="x_user_menu_support_url"/>
                             <label string="Lien «Support» dans le menu utilisateur"/>
                         </div>
                     </group>
